@@ -1,0 +1,36 @@
+
+#ifndef __EWL_NOTEBOOK_H__
+#define __EWL_NOTEBOOK_H__
+
+typedef struct _ewl_notebook_page Ewl_NotebookPage;
+
+#define EWL_NOTEBOOK_PAGE(notebook_page) ((Ewl_NotebookPage *) notebook_page)
+
+struct _ewl_notebook_page
+{
+	Ewl_Widget *tab;
+	Ewl_Widget *page;
+};
+
+typedef struct _ewl_notebook Ewl_Notebook;
+
+#define EWL_NOTEBOOK(notebook) ((Ewl_Notebook *) notebook)
+
+struct _ewl_notebook
+{
+	Ewl_Container container;
+
+	Ewl_Widget *tab_box;
+
+	Ewl_NotebookPage *visible_np;
+	Ewd_List *pages;
+};
+
+Ewl_Widget *ewl_notebook_new(void);
+void ewl_notebook_append_page(Ewl_Widget * w, Ewl_Widget * c, Ewl_Widget * l);
+void ewl_notebook_prepend_page(Ewl_Widget * w, Ewl_Widget * c,
+			       Ewl_Widget * l);
+void ewl_notebook_insert_page(Ewl_Widget * w, Ewl_Widget * c,
+			      Ewl_Widget * l, int p);
+
+#endif /* __EWL_NOTEBOOK_H__ */
